--- a/index.html
+++ b/index.html
@@ -517,15 +517,7 @@
           <br>
           Teaching Assistant with Prof. R. Venkatesh Babu
           <br>
-          Spring 2024
-          </p>
-
-          <p>
-          <font size="3"> Deep Learning for Computer vision (DS265), IISc </font>
-          <br>
-          Teaching Assistant with Prof. R. Venkatesh Babu
-          <br>
-          Spring 2023
+          Spring 2023, 2024
           </p>
       </p> 
       <hr>
