--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             </td>
 
             <td style="padding-left:5px;padding-right:40px;padding-top:20;padding-bottom:20;width:80%;vertical-align:top">
-              <papertitle><font size="3">Text2Place: Affordance Aware Human Guided Placement</font></papertitle>
+              <papertitle><font size="3">Text2Place: Affordance Aware Text Guided Human Placement</font></papertitle>
               <br> 
               <font size="2">
               <strong>Rishubh Parihar</strong>,
