--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
                 <font size="5">Recent News</font>
               </p>
               <ul>
-                <li> <font color="#888888">[Aug 24]</font>   Our work on generating multiple attribute edit variations <a href="https://rishubhpar.github.io/">AttributeDiffusion</a> accepted at <strong>WACV 2025</strong> first round. </li>
-                <li> <font color="#888888">[Jul 24]</font>   I was awarded the prestigious <a href = "https://odaa.iisc.ac.in/prof-satish-dhawan-research-award/#:~:text=Prof%20Satish%20Dhawan%20Research%20Award%20was%20instituted%20by%20alumnus%20Swapnesh,focus%20on%20benefiting%20developing%20countries.">Satish Dhawan Research Award</a> for significant contributions towards controlling image generative models. </li>
+                <li> <font color="#888888">[Nov 24]</font>   Our ECCV 2024 paper <a href="https://rishubhpar.github.io/PreciseControl.home/">PreciseControl</a> on personlization of T2I models was featured in <a href="https://timesofindia.indiatimes.com/science/dream-to-reality-iisc-system-can-bring-photos-to-life-change-its-context/articleshow/114796003.cms">Times of India</a>. </li>
+                <li> <font color="#888888">[Nov 24]</font>   Our work generating consistent mirror reflections (<a href="https://val.cds.iisc.ac.in/reflecting-reality.github.io/">Reflecting Reality</a>) accepted at <strong>3DV 2025</strong>. </li>
+                <li> <font color="#888888">[Aug 24]</font>   Our work on generating multiple attribute edit variations <a href="https://rishubhpar.github.io/">AttributeDiffusion</a> accepted at <strong>WACV 2025</strong>. </li>
+                <li> <font color="#888888">[Jul 24]</font>   I was awarded the prestigious <a href = "https://odaa.iisc.ac.in/prof-satish-dhawan-research-award/#:~:text=Prof%20Satish%20Dhawan%20Research%20Award%20was%20instituted%20by%20alumnus%20Swapnesh,focus%20on%20benefiting%20developing%20countries.">Satish Dhawan Research Award</a> for significant contributions towards controlling image generative models.</li>
                 <li> <font color="#888888">[Jul 24]</font>   Our works on fine-grained attribute control in text-to-image models (<a href="https://rishubhpar.github.io/PreciseControl.home/">PreciseControl</a>) and affordance aware human placement (<a href="https://rishubhpar.github.io/Text2Place/">Text2Place</a>) accepted at <strong>ECCV 2024</strong>. </li>
-                <li> <font color="#888888">[Jul 24]</font>   Our CVPR 2024 paper <a href="https://ab-34.github.io/balancing_act/">BalancingAct</a> on debiasing Diffusion models covered by <a href="https://timesofindia.indiatimes.com/city/bengaluru/iisc-team-develops-method-to-reduce-bias-in-ai-images/articleshow/112119878.cms">Times of India</a>. </li>
+                <li> <font color="#888888">[Jul 24]</font>   Our CVPR 2024 paper <a href="https://ab-34.github.io/balancing_act/">BalancingAct</a> on debiasing Diffusion models was featured in <a href="https://timesofindia.indiatimes.com/city/bengaluru/iisc-team-develops-method-to-reduce-bias-in-ai-images/articleshow/112119878.cms">Times of India</a>. </li>
                 <li> <font color="#888888">[Apr 24]</font>   Gave a talk on PreciseControl at <a href="https://eecs.iisc.ac.in/eecs-research-students-symposium-2024-2/">IISc EECS Symposium 2024</a>. </li> 
                 <li> <font color="#888888">[Mar 24]</font>   Our work on debiasing diffusion models with distribution guidance (<a href="https://ab-34.github.io/balancing_act/">BalancingAct</a>) accepted in <strong>CVPR 2024</strong>. </li> 
                 <li> <font color="#888888">[Jan 24]</font>   Serving as a Teaching Assistant in <strong>DS265: Deep Learning for Computer Vision</strong> at IISc. </li> 
@@ -110,6 +112,8 @@
             Publications
             </font>
           </p>
+
+
           <td>
             <p style="padding-bottom:0px; margin-bottom: 0px; margin-top: 0px; text-align:left; font-family: 'Nunito', sans-serif; font-weight: 400">
               <font size="4.5">
@@ -119,13 +123,52 @@
             </p> 
           </td>
 
+          <!-- Reflecting Reality --> 
+          <tr onmouseout="attributediff_stop()" onmouseover="attributediff_start()">
+            <td style="padding-top:10;padding-bottom:10;width:20%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='attributediff_image'>
+                  <img class="rounded-image" src='images/reflecting-reality-after.png' width="140"></div>
+                  <img class="rounded-image" src='images/reflecting-reality-before.png' width="140"> 
+              </div>
+              <script type="text/javascript">
+                function attributediff_start() {
+                  document.getElementById('attributediff_image').style.opacity = "1";
+                }
+                function attributediff_stop() {
+                  document.getElementById('attributediff_image').style.opacity = "0";
+                }
+              attributediff_stop()
+              </script>
+            </td>
+
+            <td style="padding-left:5px;padding-right:40px;padding-top:20;padding-bottom:20;width:80%;vertical-align:top">
+              <papertitle><font size="3">Reflecting Reality: Enabling Diffusion Models to Produce Faithful Mirror Reflections</font></papertitle>
+              <br> 
+              <font size="2">
+              Ankit Dhiman*,
+              Manan Shah*,
+              <strong>Rishubh Parihar</strong>,    
+              Yash Bhalgat,
+              Lokesh R Boregowda,
+              R Venkatesh Babu
+              </font>
+              <br>
+              <em>3DV 2025</em> 
+	            <br>
+              <a href="https://val.cds.iisc.ac.in/reflecting-reality.github.io/">[project page]</a> 
+              <a href="https://arxiv.org/abs/2409.14677">[paper]</a> 
+              <br> 
+            </td>
+          </tr>		
+
           <!-- Explore diverse attributes --> 
           <tr onmouseout="attributediff_stop()" onmouseover="attributediff_start()">
             <td style="padding-top:10;padding-bottom:10;width:20%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='attributediff_image'>
                   <img class="rounded-image" src='images/attributediff_after.gif' width="140"></div>
-                  <img class="rounded-image" src='images/attributediff_before.gif' width="140">
+                  <img class="rounded-image" src='images/attributediff_before.gif' width="140"> 
               </div>
               <script type="text/javascript">
                 function attributediff_start() {
@@ -158,8 +201,7 @@
               <a href="https://arxiv.org/pdf/2311.16052.pdf">[paper]</a> 
               <br> 
             </td>
-          </tr>		
-
+          </tr>		  
 
           <td>
             <p style="padding-bottom:0px; margin-bottom: 0px; margin-top: 0px; text-align:left; font-family: 'Nunito', sans-serif; font-weight: 400">
@@ -206,6 +248,7 @@
               <a href="https://arxiv.org/abs/2408.05083">[paper]</a> 
               <a href="https://github.com/rishubhpar/PreciseControl">[code]</a> 
               <a href="https://www.youtube.com/watch?v=t9GJT1HnQhU">[video]</a> 
+              <a href="https://timesofindia.indiatimes.com/science/dream-to-reality-iisc-system-can-bring-photos-to-life-change-its-context/articleshow/114796003.cms">[news]</a>  
               <br> 
               <p></p> 
             </td>
@@ -289,6 +332,7 @@
               <a href="https://ab-34.github.io/balancing_act/">[project page]</a>
               <a href="https://arxiv.org/abs/2402.18206">[paper]</a> 
               <a href="https://github.com/rishubhpar/debiasing_gen_models">[code]</a>
+              <a href="https://timesofindia.indiatimes.com/city/bengaluru/iisc-team-develops-method-to-reduce-bias-in-ai-images/articleshow/112119878.cms">[news]</a>
               <br> 
               <p></p> 
             </td>
