--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Rishubh Parihar">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🦚🏍🚁</text></svg>">
+	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎨</text></svg>">
   </style>
 </head>  
 
@@ -528,6 +528,7 @@
         <ul>
           <li> <a href="https://odaa.iisc.ac.in/prof-satish-dhawan-research-award/#:~:text=Prof%20Satish%20Dhawan%20Research%20Award%20was%20instituted%20by%20alumnus%20Swapnesh,focus%20on%20benefiting%20developing%20countries.">Satish Dhawan Research Award 2024</a> for significant contributions to the mechanisms for controlling generative models.</li>
           <li> Best Presentation Award in Visual Cluster at <a href="https://eecs.iisc.ac.in/EECS2023/">IISc EECS Research Students Symposium 2023</a>.</li>
+          <li> Best Presentation Award at Adobe-IISc Workshop 2024.</li>   
           <li> Selected for Pradhan Mantri Research Fellowship (<a href="https://www.pmrf.in/">PMRF</a>) 2021.</li>
           <li> Academics excellence award for 2018 Spring semester IIT Delhi.</li>
         </ul>
