--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                 <font size="5">Recent News</font>
               </p>
               <ul>
-		<li> <font color='#888888">[Feb 25]</font>   <a href="rishubhpar.github.io">Compass Control<a href> and <a href="rishubhpar.github.io">MonoPlace3D<a href> accepted at CVPR 2024!! 
+		            <li> <font color="#888888">[Nov 24]</font>   <a href="https://rishubhpar.github.io">Compass Control</a> and <a href="https://rishubhpar.github.io">MonoPlace3D</a> accepted at CVPR 2024!! </li>
                 <li> <font color="#888888">[Nov 24]</font>   Our ECCV 2024 paper <a href="https://rishubhpar.github.io/PreciseControl.home/">PreciseControl</a> on personlization of T2I models was featured in <a href="https://timesofindia.indiatimes.com/science/dream-to-reality-iisc-system-can-bring-photos-to-life-change-its-context/articleshow/114796003.cms">Times of India</a>. </li>
-                <li> <font color="#888888">[Nov 24]</font>   Our work generating consistent mirror reflections (<a href="https://val.cds.iisc.ac.in/reflecting-reality.github.io/">Reflecting Reality</a>) accepted at <strong>3DV 2025</strong>. </li>
+                <li> <font color="#888888">[Nov 24]</font>   Our work on generating consistent mirror reflections (<a href="https://val.cds.iisc.ac.in/reflecting-reality.github.io/">Reflecting Reality</a>) accepted at <strong>3DV 2025</strong>. </li>
                 <li> <font color="#888888">[Aug 24]</font>   Our work on generating multiple attribute edit variations <a href="https://rishubhpar.github.io/">AttributeDiffusion</a> accepted at <strong>WACV 2025</strong>. </li>
                 <li> <font color="#888888">[Jul 24]</font>   I was awarded the prestigious <a href = "https://odaa.iisc.ac.in/prof-satish-dhawan-research-award/#:~:text=Prof%20Satish%20Dhawan%20Research%20Award%20was%20instituted%20by%20alumnus%20Swapnesh,focus%20on%20benefiting%20developing%20countries.">Satish Dhawan Research Award</a> for significant contributions towards controlling image generative models.</li>
                 <li> <font color="#888888">[Jul 24]</font>   Our works on fine-grained attribute control in text-to-image models (<a href="https://rishubhpar.github.io/PreciseControl.home/">PreciseControl</a>) and affordance aware human placement (<a href="https://rishubhpar.github.io/Text2Place/">Text2Place</a>) accepted at <strong>ECCV 2024</strong>. </li>
@@ -122,7 +122,81 @@
               </font>
               <hr class="year_hr" style="margin-top: 0px;">
             </p> 
-          </td>
+          </td> 
+
+          <!-- MonoPlace3D -->
+          <tr onmouseout="monoplace3D_stop()" onmouseover="monoplace3D_start()">
+            <td style="padding-top:20;padding-bottom:20;width:20%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='monoplace_image'>
+                  <img class="rounded-image" src='images/mono-place-before.png' width="140"></div>
+                  <img class="rounded-image" src='images/mono-place-after.png' width="140">
+              </div>
+              <script type="text/javascript">
+                function monoplace3D_start() {
+                  document.getElementById('monoplace_image').style.opacity = "0";
+                }
+                function monoplace3D_stop() {
+                  document.getElementById('monoplace_image').style.opacity = "1";
+                }
+                monoplace3D_stop()
+              </script>
+            </td>
+
+            <td style="padding-left:5px;padding-right:40px;padding-top:20;padding-bottom:20;width:80%;vertical-align:top">
+              <papertitle><font size="3">MonoPlace3D: Learning 3D-Aware Object Placement for 3D Monocular Detection</font></papertitle>
+              <br> 
+              <font size="2">
+              <strong>Rishubh Parihar*</strong>,
+              Srinjay Sarkar*,
+              Sarthak Vora*,
+              Jogendra Kundu,
+              R. Venkatesh Babu
+              </font>
+              <br>
+              <span class="conf-name-text"><strong>CVPR 2025</strong></span>
+              <br>
+              <em>Details coming soon!</em>
+              <br> 
+            </td>
+          </tr>		
+
+          <!-- CompassControl -->
+          <tr onmouseout="compass_stop()" onmouseover="compass_start()">
+            <td style="padding-top:20;padding-bottom:20;width:20%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='compass_image'>
+                  <img class="rounded-image" src='images/compass-c-before.png' width="140"></div>
+                  <img class="rounded-image" src='images/compass-c-after.gif' width="140">
+              </div>
+              <script type="text/javascript">
+                function compass_start() {
+                  document.getElementById('compass_image').style.opacity = "0";
+                }
+                function compass_stop() {
+                  document.getElementById('compass_image').style.opacity = "1";
+                }
+                compass_stop()
+              </script>
+            </td>
+
+            <td style="padding-left:5px;padding-right:40px;padding-top:20;padding-bottom:20;width:80%;vertical-align:top">
+              <papertitle><font size="3">🧭 Compass Control: Multi-Object Orientation Control for Text-to-Image Generation</font></papertitle>
+              <br> 
+              <font size="2">
+              <strong>Rishubh Parihar*</strong>,
+              Vaibhav Agarwal*,
+              Sachidanand VS, 
+              R. Venkatesh Babu
+              </font>
+              <br>
+              <span class="conf-name-text"><strong>CVPR 2025</strong></span>
+              <br>
+              <em>Details coming soon!</em>
+              <br> 
+              <p></p> 
+            </td>
+          </tr>		
 
           <!-- Reflecting Reality --> 
           <tr onmouseout="attributediff_stop()" onmouseover="attributediff_start()">
@@ -155,7 +229,7 @@
               R Venkatesh Babu
               </font>
               <br>
-              <em>3DV 2025</em> 
+              <span class="conf-name-text"><strong>3DV 2025</strong></span>
 	            <br>
               <a href="https://val.cds.iisc.ac.in/reflecting-reality.github.io/">[project page]</a> 
               <a href="https://arxiv.org/abs/2409.14677">[paper]</a> 
@@ -190,16 +264,16 @@
               Prasanna Balaji*,
               Raghav Magazine,
               Sarthak Vora,
-              Tejan Karmali,
               Varun Jampani,
               R. Venkatesh Babu
               </font>
               <br>
-              <em>Workshop on Diffusion Models, NeurIPS 2023 </em>
+              <span class="conf-name-text"><strong>Workshop on Diffusion Models, NeurIPS 2023</strong></span>
               <br>
-              <em>WACV 2025</em> 
+              <span class="conf-name-text"><strong>WACV 2025</strong></span>
 	            <br>
-              <a href="https://arxiv.org/pdf/2311.16052.pdf">[paper]</a> 
+              <a href="https://rishubhpar.github.io/attributediffusion/">[project page]</a>
+              <a href="https://openaccess.thecvf.com/content/WACV2025/papers/Parihar_Attribute_Diffusion_Diffusion_Driven_Diverse_Attribute_Editing_WACV_2025_paper.pdf">[paper]</a> 
               <br> 
             </td>
           </tr>		  
@@ -243,7 +317,7 @@
               R. Venkatesh Babu
               </font>
               <br>
-              <em>ECCV 2024</em>
+              <span class="conf-name-text"><strong>ECCV 2024</strong></span>
 	            <br>
               <a href="https://rishubhpar.github.io/PreciseControl.home/">[project page]</a>
               <a href="https://arxiv.org/abs/2408.05083">[paper]</a> 
@@ -285,7 +359,7 @@
               R. Venkatesh Babu
               </font>
               <br>
-              <em>ECCV 2024</em>
+              <span class="conf-name-text"><strong>ECCV 2024</strong></span>
 	            <br>
               <a href="https://rishubhpar.github.io/Text2Place/">[project page]</a>
               <a href="https://arxiv.org/pdf/2407.15446v1">[paper]</a> 
@@ -328,7 +402,7 @@
               R. Venkatesh Babu
               </font>
               <br>
-              <em>CVPR 2024</em>
+              <span class="conf-name-text"><strong>CVPR 2024</strong></span>
 	            <br>
               <a href="https://ab-34.github.io/balancing_act/">[project page]</a>
               <a href="https://arxiv.org/abs/2402.18206">[paper]</a> 
@@ -380,7 +454,7 @@
               R. Venkatesh Babu
               </font>
               <br>
-              <em> ICCV 2023 </em> 
+              <span class="conf-name-text"><strong>ICCV 2023</strong></span>
 	            <br>
               <a href="https://ankitatiisc.github.io/Strata-NeRF/">[project page]</a>
               <a href="https://arxiv.org/abs/2308.10337">[paper]</a>
@@ -420,7 +494,7 @@
               R. Venkatesh Babu
               </font>
               <br>
-              <em>Workshop on AI for Content Creation, CVPR 2023</em>
+              <span class="conf-name-text"><strong>Workshop on AI for Content Creation, CVPR 2023</strong></span>
 	            <br>
               <a href="https://rishubhpar.github.io/motionstyle/">[project page]</a>
               <a href="https://arxiv.org/abs/2306.00559">[paper]</a>
@@ -469,7 +543,7 @@
               R. Venkatesh Babu
               </font>
               <br>
-              <em>ACMMM 2022</em>
+              <span class="conf-name-text"><strong>ACM Multimedia 2022</strong></span>
 	            <br>
               <a href="https://sites.google.com/view/flamelatentediting/">[project page]</a>
               <a href="https://arxiv.org/abs/2207.09855">[paper]</a>
@@ -511,7 +585,7 @@
               R. Venkatesh Babu
               </font>
               <br>
-              <em>ECCV 2022</em>
+              <span class="conf-name-text"><strong>ECCV 2022</strong></span>
               <br>
               <a href="https://sites.google.com/view/hsr-eccv22/">[project page]</a>
               <a href="https://arxiv.org/abs/2208.03764">[paper]</a>
@@ -545,7 +619,7 @@
         <span style="font-size:22px;">Reviewing</span>
         <br>
         <p>
-        WACV 2025, NeurIPS 2024, ECCV 2024, CVPR 2024, WACV 2024, ICCV 2023, CVPR 2023, ECCV 2022
+        ICCV 2025, CVPR 2025, WACV 2025, NeurIPS 2024, ECCV 2024, CVPR 2024, WACV 2024, ICCV 2023, CVPR 2023, ECCV 2022
       </p>
       </p>
     <hr>
