--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               <br>
               <span class="conf-name-text"><strong>CVPR 2025</strong></span>
               <br>
-              <em>Details coming soon!</em>
+              <em><span style="color: rgb(58, 58, 223);">Details coming soon!</em>
               <br> 
             </td>
           </tr>		
@@ -192,7 +192,7 @@
               <br>
               <span class="conf-name-text"><strong>CVPR 2025</strong></span>
               <br>
-              <em>Details coming soon!</em>
+              <em><span style="color: rgb(58, 58, 223);">Details coming soon!</em>
               <br> 
               <p></p> 
             </td>
