--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             </td>
 
             <td style="padding-left:5px;padding-right:40px;padding-top:20;padding-bottom:20;width:80%;vertical-align:top">
-              <papertitle><font size="3">Exploring Attribute Variations in Style-based GANs using Diffusion Models</font></papertitle>
+              <papertitle><font size="3">Attribute Diffusion: Diffusion Driven Diverse Attribute Editing</font></papertitle>
               <br> 
               <font size="2">
               <strong>Rishubh Parihar*</strong>,
