--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <title>Rishubh Parihar</title>
   
   <meta name="author" content="Rishubh Parihar">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Commenting out for same view on mobile -->
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1">  --> 
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎨</text></svg>">
   </style>
