--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
 <body style="background-color: rgb(247, 245, 238);">
-  <table style="width:100%;max-width:850px;border:20px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+  <table style="width:100%;max-width:1000px;border:20px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
     <tr style="padding:0px">
       <td style="padding:0px">
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -54,14 +54,16 @@
                 </font>
               </p>
               <p style="margin-top: 4px;">
+                <font size="3.5">
                 rishubhp@iisc.ac.in
+                </font>
               </p>
-              <p style="line-height:1.4; font-family: 'Nunito', sans-serif; font-weight: 400" > 
+              <p style="line-height:1.4; font-family: 'Nunito', sans-serif; font-weight: 300" > 
               I am a fourth year PhD student at IISc Bangalore, advised by <a href="http://cds.iisc.ac.in/faculty/venky/">Prof. Venkatesh Babu</a>.
-              Prior to my Ph.D., I gained industry experience at Samsung Research, where I developed face editing solutions for Samsung smartphones, and at ShareChat, focusing on multimodal algorithms for content moderation. 
+              Prior to my Ph.D., I ga ined industry experience at Samsung Research, where I developed face editing solutions for Samsung smartphones, and at ShareChat, focusing on multimodal algorithms for content moderation. 
               I obtained BTech from IIT Delhi in Mathematics and Computing, where I worked with Prof. <a href="https://www.cse.iitd.ac.in/~pkalra/">Prem Kalra</a> on synthetic makeup transfer.   
               </p>
-              <p style="line-height:1.4; font-family: 'Nunito', sans-serif; font-weight: 400"> 
+              <p style="line-height:1.4; font-family: 'Nunito', sans-serif; font-weight: 300"> 
               I work on developing methods to enhance controllability in vision generative models, by designing interfaces beyond text to interact with these models.
               </p>
               <p style="text-align:left">
@@ -89,7 +91,7 @@
                 <font size="5">Recent News</font>
               </p>
               <ul>
-		            <li> <font color="#888888">[Feb 25]</font>   <a href="https://rishubhpar.github.io">Compass Control</a> and <a href="https://rishubhpar.github.io">MonoPlace3D</a> accepted at CVPR 2024!! </li>
+		            <li> <font color="#888888">[Feb 25]</font>   <a href="https://rishubhpar.github.io">Compass Control</a> and <a href="https://rishubhpar.github.io">MonoPlace3D</a> accepted at <strong>CVPR2025</strong>!! </li>
                 <li> <font color="#888888">[Nov 24]</font>   Our ECCV 2024 paper <a href="https://rishubhpar.github.io/PreciseControl.home/">PreciseControl</a> on personlization of T2I models was featured in <a href="https://timesofindia.indiatimes.com/science/dream-to-reality-iisc-system-can-bring-photos-to-life-change-its-context/articleshow/114796003.cms">Times of India</a>. </li>
                 <li> <font color="#888888">[Nov 24]</font>   Our work on generating consistent mirror reflections (<a href="https://val.cds.iisc.ac.in/reflecting-reality.github.io/">Reflecting Reality</a>) accepted at <strong>3DV 2025</strong>. </li>
                 <li> <font color="#888888">[Aug 24]</font>   Our work on generating multiple attribute edit variations <a href="https://rishubhpar.github.io/">AttributeDiffusion</a> accepted at <strong>WACV 2025</strong>. </li>
@@ -120,7 +122,7 @@
 
           <td>
             <p style="padding-bottom:0px; margin-bottom: 0px; margin-top: 0px; text-align:left; font-family: 'Nunito', sans-serif; font-weight: 400">
-              <font size="4.5">
+              <font size="5">
               2025
               </font>
               <hr class="year_hr" style="margin-top: 0px;">
@@ -132,8 +134,8 @@
             <td style="padding-top:20;padding-bottom:20;width:20%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='monoplace_image'>
-                  <img class="rounded-image" src='images/mono-place-before.png' width="140"></div>
-                  <img class="rounded-image" src='images/mono-place-after.png' width="140">
+                  <img class="rounded-image" src='images/mono-place-before.png' width="200"></div>
+                  <img class="rounded-image" src='images/mono-place-after.png' width="200">
               </div>
               <script type="text/javascript">
                 function monoplace3D_start() {
@@ -150,13 +152,11 @@
               <div style="margin-top:-10px">
               <papertitle><font size="3">MonoPlace3D: Learning 3D-Aware Object Placement for 3D Monocular Detection</font></papertitle>
               <br> 
-              <font size="2">
               <strong>Rishubh Parihar*</strong>,
               Srinjay Sarkar*,
               Sarthak Vora*,
               Jogendra Kundu,
               R. Venkatesh Babu
-              </font>
               <br>
               <span class="conf-name-text"><strong>CVPR 2025</strong></span>
               <br>
@@ -190,38 +190,35 @@
               <div style="margin-top:-10px">
               <papertitle><font size="3">🧭 Compass Control: Multi-Object Orientation Control for Text-to-Image Generation</font></papertitle>
               <br> 
-              <font size="2">
               <strong>Rishubh Parihar*</strong>,
               Vaibhav Agarwal*,
               Sachidanand VS, 
               R. Venkatesh Babu
-              </font>
               <br>
               <span class="conf-name-text"><strong>CVPR 2025</strong></span>
               <br>
               <a href="https://rishubhpar.github.io/compasscontrol">[project page]</a> 
               <a href="https://arxiv.org/abs/2504.06752">[paper]</a>
-              <br> 
               </div>
             </td>
           </tr>		
 
           <!-- Reflecting Reality --> 
-          <tr onmouseout="attributediff_stop()" onmouseover="attributediff_start()">
+          <tr onmouseout="reflectreal_stop()" onmouseover="reflectreal_start()">
             <td style="padding-top:20px;padding-bottom:20px;width:20%;vertical-align:middle">
               <div class="one">
-                <div class="two" id='attributediff_image'>
+                <div class="two" id='reflectreal_image'>
                   <img class="rounded-image" src='images/reflecting-reality-after.png' width="140"></div>
                   <img class="rounded-image" src='images/reflecting-reality-before.png' width="140"> 
               </div>
               <script type="text/javascript">
-                function attributediff_start() {
-                  document.getElementById('attributediff_image').style.opacity = "1";
+                function reflectreal_start() {
+                  document.getElementById('reflectreal_image').style.opacity = "1";
                 }
-                function attributediff_stop() {
-                  document.getElementById('attributediff_image').style.opacity = "0";
+                function reflectreal_stop() {
+                  document.getElementById('reflectreal_image').style.opacity = "0";
                 }
-                attributediff_stop()
+                reflectreal_stop()
               </script>
             </td>
 
@@ -229,14 +226,12 @@
               <div style="margin-top:-10px">
                 <papertitle><font size="3">Reflecting Reality: Enabling Diffusion Models to Produce Faithful Mirror Reflections</font></papertitle>
                 <br> 
-                <font size="2">
                 Ankit Dhiman*,
                 Manan Shah*,
                 <strong>Rishubh Parihar</strong>,    
                 Yash Bhalgat,
                 Lokesh R Boregowda,
                 R Venkatesh Babu
-                </font>
                 <br>
                 <span class="conf-name-text"><strong>3DV 2025</strong></span>
 	            <br>
@@ -270,14 +265,12 @@
               <div style="margin-top:-10px">
               <papertitle><font size="3">Attribute Diffusion: Diffusion Driven Diverse Attribute Editing</font></papertitle>
               <br> 
-              <font size="2">
               <strong>Rishubh Parihar*</strong>,
               Prasanna Balaji*,
               Raghav Magazine,
               Sarthak Vora,
               Varun Jampani,
               R. Venkatesh Babu
-              </font>
               <br>
               <span class="conf-name-text"><strong>Workshop on Diffusion Models, NeurIPS 2023</strong></span>
               <br>
@@ -292,7 +285,7 @@
 
           <td>
             <p style="padding-bottom:0px; margin-bottom: 0px; margin-top: 0px; text-align:left; font-family: 'Nunito', sans-serif; font-weight: 400">
-              <font size="4.5">
+              <font size="5">
               2024
               </font>
               <hr class="year_hr" style="margin-top: 0px;">
@@ -322,13 +315,11 @@
               <div style="margin-top:-10px">
               <papertitle><font size="3">PreciseControl: Enhancing Text-to-Image Diffusion Models with Fine-Grained Attribute Control</font></papertitle>
               <br> 
-              <font size="2">
               <strong>Rishubh Parihar*</strong>,
               Sachidanand VS*,
               Sabariswaran Mani,
               Tejan Karmali,
               R. Venkatesh Babu
-              </font>
               <br>
               <span class="conf-name-text"><strong>ECCV 2024</strong></span>
 	            <br>
@@ -366,12 +357,10 @@
               <div style="margin-top:-10px">
               <papertitle><font size="3">Text2Place: Affordance Aware Text Guided Human Placement</font></papertitle>
               <br> 
-              <font size="2">
               <strong>Rishubh Parihar</strong>,
               Harsh Gupta,
               Sachidanand VS,
               R. Venkatesh Babu
-              </font>
               <br>
               <span class="conf-name-text"><strong>ECCV 2024</strong></span>
 	            <br>
@@ -408,14 +397,12 @@
               <div style="margin-top:-10px">
               <papertitle><font size="3">Balancing Act: Distribution-Guided Debiasing in Diffusion Models</font></papertitle>
               <br> 
-              <font size="2">
               <strong>Rishubh Parihar*</strong>,
               Abhijnya Bhat*,
               Saswat Mallick,
               Abhipsa Basu,
               Jogendra Nath Kundu,
               R. Venkatesh Babu
-              </font>
               <br>
               <span class="conf-name-text"><strong>CVPR 2024</strong></span>
 	            <br>
@@ -429,8 +416,9 @@
           </tr>		
 
           <td>
+            <br> 
             <p style="padding-bottom:0px; margin-bottom: 0px; margin-top: 0px; text-align:left; font-family: 'Nunito', sans-serif; font-weight: 400">
-              <font size="4.5">
+              <font size="5">
               2023
               </font>
               <hr class="year_hr" style="margin-top: 0px;">
@@ -461,7 +449,6 @@
               <div style="margin-top:-10px">
               <papertitle><font size="3">Strata-NeRF: Neural Radiance Fields for Stratified Scenes</font></papertitle>
               <br>
-              <font size="2">
               Ankit Dhiman,
               R Srinath,
               Harsh Rangwani,
@@ -469,7 +456,6 @@
               Lokesh R Boregowda,
               Srinath Sridhar,
               R. Venkatesh Babu
-              </font>
               <br>
               <span class="conf-name-text"><strong>ICCV 2023</strong></span>
 	            <br>
@@ -506,12 +492,10 @@
               <div style="margin-top:-10px">
               <papertitle><font size="3">We never go out of Style: Motion Disentanglement by Subspace Decomposition of Latent Space</font></papertitle>
               <br>
-              <font size="2">
               <Strong>Rishubh Parihar</Strong>,
               Raghav Magazine,
               Piyush Tiwari,
               R. Venkatesh Babu
-              </font>
               <br>
               <span class="conf-name-text"><strong>Workshop on AI for Content Creation, CVPR 2023</strong></span>
 	            <br>
@@ -524,8 +508,9 @@
           </tr>		
 
           <td>
+            <br>
             <p style="padding-bottom:0px; margin-bottom: 0px; margin-top: 0px; text-align:left; font-family: 'Nunito', sans-serif; font-weight: 400">
-              <font size="4.5">
+              <font size="5">
               2022
               </font>
               <hr class="year_hr" style="margin-top: 0px;">
@@ -557,12 +542,10 @@
               <papertitle><font size="3">Everything is in the Latent Space: Attribute Style Editing and Attribute Style Manipulation
                 by StyleGAN Latent Space Exploration</font></papertitle>
               <br>
-              <font size="2">
               <Strong>Rishubh Parihar</Strong>,
               Ankit Dhiman,
               Tejan Karmali,
               R. Venkatesh Babu
-              </font>
               <br>
               <span class="conf-name-text"><strong>ACM Multimedia 2022</strong></span>
 	            <br>
@@ -598,7 +581,6 @@
               <div style="margin-top:-10px">
               <papertitle><font size="3">Hierarchical Semantic Regularization of Latent Spaces in StyleGANs</font></papertitle>
               <br>
-              <font size="2">
               Tejan Karmali,
               <Strong>Rishubh Parihar</Strong>,
               Susmit Agrawal,
@@ -606,7 +588,6 @@
               Varun Jampani,
               Manish Singh,
               R. Venkatesh Babu
-              </font>
               <br>
               <span class="conf-name-text"><strong>ECCV 2022</strong></span>
               <br>
