--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </td>
             <td style="padding-top:3%;padding-bottom:3%;padding-left:3%;width:40%;max-width:40%;">
               <div class="profile-container">
-                <img class="profile-photo" src="images/dp-n.jpg"> 
+                <img class="profile-photo" src="images/dp_pixar.png"> 
               </div>
             </td>
           </tr>
